--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,4 +1,4 @@
-<ion-view title="Map">
+<ion-view title="Access Able">
 
   <ion-nav-buttons side="left">
     <button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
@@ -12,6 +12,19 @@
 
     <leaflet defaults="map.defaults" center="map.center" markers="map.markers" ng-if="map"></leaflet>
 
+    <div class="bottom-menu">
+      <a class="button button-full icon icon-left ion-star" href="#/tab/facts">Take me home</a>
+      <a class="button button-full icon icon-left ion-home" href="#/tab/facts">Select from favourites</a>
+    </div>
+
   </ion-content>
+
+
+
+  <!-- <ion-footer-bar align-title="left" class="bar-assertive">
+    <div class="buttons">
+      <button class="button button-full">Left Button</button>
+    </div>
+  </ion-footer-bar> -->
 
 </ion-view>
