Fix issues with locations. Add lodash library. Basic search route controls

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -21,7 +21,7 @@
 
       <ion-list>
 
-        <ion-item nav-clear menu-close ng-click="goTo(locationKey)" ng-repeat="(locationKey,location) in locations track by location.name">
+        <ion-item nav-clear menu-close ng-click="goTo(location.name)" ng-repeat="(locationKey,location) in locations track by location.name">
           {{location.name}}
         </ion-item>
 
