--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -10,6 +10,22 @@
 
   <ion-content data-tap-disabled="true">
 
+    <form name="searchForm" ng-submit="searchRoute()">
+
+      <div class="list">
+
+        <label class="item item-input">
+          <input type="text" ng-model="startLocation.name" placeholder="Enter starting point" ng-minlength="1" ng-maxlength="100" required>
+        </label>
+
+        <label class="item item-input">
+          <input type="text" ng-model="endLocation.name" placeholder="Enter destination" ng-minlength="1" ng-maxlength="100" required>
+        </label>
+
+      </div>
+
+    </form>
+
     <leaflet defaults="map.defaults" center="map.center" markers="map.markers" ng-if="map"></leaflet>
 
     <div class="bottom-menu">
